# Mira

./: AUTHORS  BuildNfa.hs  ImplementNfa.hs  LICENCE  Matches.hs  MinimiseDfa.hs  Mira.cabal  NfaLib.hs  NfaMisc.hs  NfaToDfa.hs  NfaTypes.hs  RegExp.hs  RegExpParser.y  RunTests.hs  Sets.lhs  Setup.hs  Top.hs  mira.cabal
Notes/: notes.tex  pic1.ps  pic10.ps  pic11.ps  pic12.ps  pic2.ps  pic3.ps  pic3a.ps  pic3b.ps  pic4.ps  pic5.ps  pic6.ps  pic7a.ps  pic7b.ps  pic7c.ps  pic8.ps  pic9.ps
Tests/: RunTests.hs  TestBuildNfa.hs  TestMinimiseDfa.hs
mira/: build_nfa.m  implement_nfa.m  matches.m  minimise_dfa.m  nfa_lib.m  nfa_misc.m  nfa_to_dfa.m  nfa_types.m  regexp.m  relations.m  sets.m  top.m
src/Language/: Mira.hs
src/Language/Mira/: BuildNfa.hs  Generate.hs  ImplementNfa.hs  Matches.hs  MinimiseDfa.hs  NfaLib.hs  NfaMisc.hs  NfaToDfa.hs  NfaTypes.hs  RegExp.hs  RegExpParser.y  Root.hs
src/Tests/: RunTests.hs
src/Tests/Language/Mira/: TestBuildNfa.hs  TestMinimiseDfa.hs
src/examples/: BuildComplexNfaExample.hs  BuildDfaExample.hs  ParserExample.hs
