Name:		Mira
Version:	1.0
Cabal-Version:	>=1.2
License:	BSD3
License-File:	LICENCE
Author:		Simon J. Thompson
Homepage:	http://www.cs.kent.ac.uk/people/staff/sjt/craft2e/regExp.html
Category:	Automata Theory
Synopsis:	A regular expression and automata library.
Build-Type:	Simple

Library
  Build-Depends:	base < 5
                      , containers < 0.3
                      , QuickCheck >= 2 && < 2.2
  Exposed-modules:
    BuildNfa, ImplementNfa, MinimiseDfa,
    NfaLib, NfaToDfa, NfaMisc, NfaTypes, RegExp

